Fixed bug #40091 (spl_autoload_register with 2 instances of the same class).